# PlayWithCompiler

./: .classpath  .gitignore  README.md  antlr_install.md  pom.xml
lab/01/: Comparison of parser generators - Wikipedia.htm
lab/16-18/: pom.xml
lab/26-llvmdemo/: CMakeLists.txt  DemoJIT.h  main.cpp
lab/27-opt/: CMakeLists.txt  main.cpp
lab/31-simd/: CMakeLists.txt  loop-O2-scalar.s  loop-O2.s  loop-avx2.s  loop-scalar.s  loop.c  simd1.c  simd2-O2-avx2.s  simd2.c  simd3.c  simd3.s  sisd.c
lab/32-bytecode/: MyClass2.bc  pom.xml
lab/33-jit/: CMakeLists.txt  foo.c  jit.cpp
lab/38-meta/: MaxMin.java  meta.lsp
lab/antlrtest/: .classpath  .project  pom.xml
lab/antlrtest/src/antlrtest/: ASTEvaluator.java  CommonLexer.g4  Hello.g4  Hello.interp  Hello.java  PlayScript.g4  PlayScript.java  PlayScriptBaseListener.java  PlayScriptBaseVisitor.java  PlayScriptLexer.java  PlayScriptListener.java  PlayScriptParser.java  PlayScriptVisitor.java
lab/as/: convention-fun1.s  convention-main.c  function-call1-craft.s  function-call1-generated.s  function-call1.c  function-call2-craft.s  function-call2-generated.s  function-call2.c  hello.O2.s  hello.c  hello.s  playscript-generated.s
lab/clojure/: Clojure.js
lab/closure/: FP.play  closure-fibonacci.js  closure.js
lab/craft/: ASTNode.java  ASTNodeType.java  SimpleCalculator.java  SimpleLexer.java  SimpleParser.java  SimpleScript.java  Token.java  TokenReader.java  TokenType.java
lab/db/: .project  pom.xml
lab/dsql/: pom.xml
lab/dsql/src/main/: PlSqlLexer.g4  PlSqlLexer.interp  PlSqlLexer.java  PlSqlParser.g4  PlSqlParser.interp  PlSqlParserBaseListener.java  PlSqlParserBaseVisitor.java  PlSqlParserListener.java  PlSqlParserVisitor.java
lab/llvm/: function-call1-clang.s  function-call1.bc  function-call1.s
lab/oop/: ThisSuperTest.java
lab/report/: .project  pom.xml
lab/scope/: Extent.java  Extent2.java  Scope.java  extent  extent.c  scope  scope.c
playscript-cpp/: CMakeLists.txt  playscript-cpp.code-workspace  playscript-cpp.layout
playscript-cpp/src/: PlayScript.cpp
playscript-cpp/src/grammar/: ASTEvaluator.cpp  ASTEvaluator.h  CommonLexer.g4  Function.cpp  Function.h  FunctionType.cpp  FunctionType.h  IRGen.cpp  IRGen.h  PlayScript.g4  PlayScriptBaseListener.cpp  PlayScriptBaseListener.h  PlayScriptBaseVisitor.cpp  PlayScriptBaseVisitor.h  PlayScriptJIT.cpp  PlayScriptJIT.h  PlayScriptLexer.cpp  PlayScriptLexer.h  PlayScriptListener.cpp  PlayScriptListener.h  PlayScriptParser.cpp  PlayScriptParser.h  PlayScriptVisitor.cpp  PlayScriptVisitor.h  RefPass.cpp  RefPass.h  Scope.cpp  Scope.h  Symbol.cpp  Symbol.h  Type.cpp  Type.h  Variable.cpp  Variable.h
playscript-java/: .classpath  .project  README.md  pom.xml
playscript-java/src/examples/: BlockScope.play  ClassTest.play  FirstClassFunction.play  LinkedList.play  ObjectAssign.play  UseBeforeDeclare.play  asm.play  asm.s  bytecode.play  closure-fibonacci.play  closure-mammal.play  closure.play  expressions.play  function.play  loop.play  mammal.play  regression.play  scratch.play  sematic-check.play  this-and-super.play
playscript-java/src/main/play/: ASTEvaluator.java  AnnotatedTree.java  AsmGen.java  AttributeEvaluator.java  BlockScope.java  BreakObject.java  ByteCodeGen.java  Class.java  ClassObject.java  ClosureAnalyzer.java  CommonLexer.g4  CompilationLog.java  DefaultConstructor.java  DefaultFunctionType.java  Function.java  FunctionObject.java  FunctionType.java  LValue.java  NameSpace.java  NullObject.java  ObjectAssign.play  PlayObject.java  PlayScript.g4  PlayScript.interp  PlayScript.java  PlayScriptBaseListener.java  PlayScriptCompiler.java  PlayScriptLexer.interp  PlayScriptLexer.java  PlayScriptListener.java  PlayScriptParser.java  PlayScriptVisitor.java  PrimitiveType.java  RefPass.java  RefResolver.java  ReturnObject.java  Scope.java  SematicValidator.java  StackFrame.java  Super.java  (+12 more)
src/09/: ClassTest.play  Extent.java  Scope.java
src/10/: MemberOverload.java
src/PlayScript/play/: ASTEvaluator.java  BlockFrame.java  Class.java  CompilationRecord.java  FunctionObject.java  LValue.java  ObjectFrame.java  PlayObject.java  PlayScript.java  PlayScriptBaseVisitor.java  PlayScriptLexer.java  PrimitiveType.java  RefPass.java  Reference.java  StackFrame.java  Type.java  TypeType.java  VMHeap.java  VMStack.java  Variable.java
src/PlayScript/play/.antlr/: CommonLexer.java
src/lab/antlr/: ASTEvaluator.java  Hello.java  IntegerVisitor.java  PlayScript.g4  PlayScript.java  PlayScriptBaseVisitor.java  PlayScriptLexer.java  PlayScriptParser.java  PlayScriptVisitor.java
src/lab/antlr/.antlr/: CommonLexer.java  CommonLexer.tokens  Hello.interp  PlayScriptLexer.interp  PlayScriptLexer.java  PlayScriptParser.java
src/lab/clojure/: Clojure.play
src/lab/craft/: ASTNode.java  SimpleCalculator.java  SimpleParser.java  SimpleScript.java  Token.java  TokenType.java
src/lab/oop/: MemberOverload.java
src/lab/scope/: Extent.java  Scope.java
src/main/cpp/script/: PlayScriptBaseListener.cpp  PlayScriptBaseListener.h  PlayScriptLexer.cpp  PlayScriptLexer.h  PlayScriptListener.cpp  PlayScriptListener.h  PlayScriptParser.cpp  PlayScriptParser.h
src/main/java/compiler/: ASTNode.java  ASTNodeType.java  Hello.g4  Hello.java  HelloParser.java  MyParserBaseListener.java  MyParserLexer.java  MyParserListener.java  MyParserParser.java  SimpleLexer1.java  SimpleParser1.java  SimpleParser2.java  Token.java  (+2 more)
(+147 files in other folders)
